--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "axios": "^0.23.0",
     "bootstrap": "^5.1.1",
     "firebase": "^9.1.3",
+    "html2canvas": "^1.3.2",
+    "jspdf": "^2.4.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
