--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.1",
+    "dotenv": "^10.0.0",
     "firebase": "^9.1.3",
     "firebase-tools": "^9.23.0",
     "html2canvas": "^1.3.2",
